fix login to return JWT token

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,9 +1,17 @@
-server.port=8080
-spring.application.name=Backend
 
-# # Enable for JPA + H2 dev
-# spring.jpa.hibernate.ddl-auto=update
-# spring.datasource.url=jdbc:h2:mem:testdb
-# spring.datasource.driverClassName=org.h2.Driver
-# spring.datasource.username=sa
-# spring.datasource.password=
+server.port=8080
+spring.application.name=Devops Backend
+
+# H2 in-memory (dev)
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL;DB_CLOSE_DELAY=-1
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# JWT
+# IMPORTANT: change this secret in real deployments (>=32 chars)
+app.jwt.secret=sokvjugyqpmvjdhdivkcxgtyqzexxkzw
+app.jwt.ttl-ms=86400000
