--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,17 +1,21 @@
-
 server.port=8080
 spring.application.name=Devops Backend
 
-# H2 in-memory (dev)
-spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL;DB_CLOSE_DELAY=-1
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# PostgreSQL (container ชื่อ service: db)
+spring.datasource.url=jdbc:postgresql://db:5432/devopsdb
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username=devuser
+spring.datasource.password=devpass
 
-# JWT
-# IMPORTANT: change this secret in real deployments (>=32 chars)
-app.jwt.secret=sokvjugyqpmvjdhdivkcxgtyqzexxkzw
+# JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# (ถ้ามี actuator)
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.probes.enabled=true
+
+# JWT (ถ้าใช้)
+app.jwt.secret=${APP_JWT_SECRET:change-me-super-secret-key-at-least-32-chars}
 app.jwt.ttl-ms=86400000
