--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,21 +1,19 @@
-server.port=8080
-spring.application.name=Devops Backend
+# Spring Datasource
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://db:5432/devopsdb}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:postgrespw}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# PostgreSQL (container ชื่อ service: db)
-spring.datasource.url=jdbc:postgresql://db:5432/devopsdb
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.username=devuser
-spring.datasource.password=devpass
+# Hibernate
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.open-in-view=false
+spring.jpa.show-sql=false
 
-# JPA / Hibernate
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# Flyway
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+spring.flyway.locations=classpath:db/migration
 
-# (ถ้ามี actuator)
-management.endpoints.web.exposure.include=health,info
-management.endpoint.health.probes.enabled=true
-
-# JWT (ถ้าใช้)
-app.jwt.secret=${APP_JWT_SECRET:change-me-super-secret-key-at-least-32-chars}
-app.jwt.ttl-ms=86400000
+# Timezone
+spring.jackson.time-zone=Asia/Bangkok
