added JWT configuration for authentication and updated database credentials in application.properties and docker-compose.yml

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Spring Datasource
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://db:5432/devopsdb}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:postgrespw}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:devuser}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:devpass}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate
@@ -17,3 +17,7 @@ spring.flyway.locations=classpath:db/migration
 
 # Timezone
 spring.jackson.time-zone=Asia/Bangkok
+
+# JWT
+app.jwt.secret=${APP_JWT_SECRET:dev-secret-change-me}
+app.jwt.expiration=${APP_JWT_EXPIRATION:3600}  # วินาที (1 ชั่วโมง)
