--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -11,9 +11,7 @@ spring.jpa.open-in-view=false
 spring.jpa.show-sql=false
 
 # Flyway
-spring.flyway.enabled=true
-spring.flyway.baseline-on-migrate=true
-spring.flyway.locations=classpath:db/migration
+spring.flyway.enabled=false
 
 # Timezone
 spring.jackson.time-zone=Asia/Bangkok
