--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       start_period: 5s
     volumes:
       - db_data:/var/lib/postgresql/data
+      - ./Backend/src/main/resources/db/init/butcon_postgres_INIT.sql:/docker-entrypoint-initdb.d/001_init.sql
 
   backend:
     build:
@@ -26,9 +27,11 @@ services:
       SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/devopsdb
       SPRING_DATASOURCE_USERNAME: devuser
       SPRING_DATASOURCE_PASSWORD: devpass
-       # --- JWT (ต้องยาว >= 32 bytes สำหรับ HS256; แนะนำ 64 bytes ขึ้นไป) ---
-      APP_JWT_SECRET: "uFrd1bQp5p9Hn3e3yM3jH0wH6b9Qh2b/8Qy6rH8cJz3pT2g7C1q9m3t4X6y8a1b2c3d4e5f6g7h8i9j0k1l2m3==" 
-      APP_JWT_EXPIRATION: "3600"  # วินาที
+      # JWT
+      APP_JWT_SECRET: "uFrd1bQp5p9Hn3e3yM3jH0wH6b9Qh2b/8Qy6rH8cJz3pT2g7C1q9m3t4X6y8a1b2c3d4e5f6g7h8i9j0k1l2m3=="
+      APP_JWT_EXPIRATION: "3600"
+      # ❗️ถ้ายังมี Flyway dependency อยู่ ให้ปิดด้วยค่าด้านล่าง
+      SPRING_FLYWAY_ENABLED: "false"
     depends_on:
       db:
         condition: service_healthy
@@ -37,7 +40,7 @@ services:
   frontend:
     build:
       context: ./Frontend
-      dockerfile: Dockerfile.dev   # ถ้าอยาก HMR ให้ใช้ .dev; โปรดักชันใช้ Dockerfile ปกติ
+      dockerfile: Dockerfile
     container_name: frontend-dev
     depends_on: ["backend"]
     ports: ["5173:5173"]
@@ -56,10 +59,8 @@ services:
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@admin.com
       PGADMIN_DEFAULT_PASSWORD: adminpassword
-    ports:
-      - "8081:80"
-    depends_on:
-      - db
+    ports: ["8081:80"]
+    depends_on: ["db"]
     volumes:
       - pgadmin_data:/var/lib/pgadmin
 
