fix backend and db path

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -18,4 +18,4 @@ spring.jackson.time-zone=Asia/Bangkok
 
 # JWT
 app.jwt.secret=${APP_JWT_SECRET:dev-secret-change-me}
-app.jwt.expiration=${APP_JWT_EXPIRATION:3600}  # วินาที (1 ชั่วโมง)
+app.jwt.expiration=${APP_JWT_EXPIRATION:3600} #seconds
