--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -17,5 +17,5 @@ spring.flyway.enabled=false
 spring.jackson.time-zone=Asia/Bangkok
 
 # JWT
-app.jwt.secret=${APP_JWT_SECRET:dev-secret-change-me}
-app.jwt.expiration=${APP_JWT_EXPIRATION:3600} #seconds
+app.jwt.secret=${APP_JWT_SECRET:dev-secret-dev-secret-dev-secret-dev}
+app.jwt.expiration=86400000
