--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,16 +7,18 @@ services:
       POSTGRES_DB: devopsdb
       POSTGRES_USER: devuser
       POSTGRES_PASSWORD: devpass
-    ports: ["5432:5432"]
+    ports: [ "5432:5432" ]
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U devuser -d devopsdb || exit 1"]
+      test: [ "CMD-SHELL", "pg_isready -U devuser -d devopsdb || exit 1" ]
       interval: 5s
       timeout: 5s
       retries: 12
       start_period: 5s
     volumes:
       - db_data:/var/lib/postgresql/data
-      - ./Backend/src/main/resources/db/init/butcon_postgres_INIT.sql:/docker-entrypoint-initdb.d/001_init.sql
+      - ./Backend/src/main/resources/db/init/butcon_postgres_INIT.sql:/docker-entrypoint-initdb.d/001_init.sql:ro
+
+
 
   backend:
     build:
