organization sign in success

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 server.port=8080
 spring.application.name=Devops Backend
 
-# PostgreSQL
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://db:5432/devopsdb}
+# PostgreSQL - ???????????? localhost
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/devopsdb}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:devuser}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:devpass}
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -23,3 +23,7 @@ app.jwt.expiration=${APP_JWT_EXPIRATION:86400000}
 
 # Timezone
 spring.jackson.time-zone=Asia/Bangkok
+
+# Logging - ????? debug
+logging.level.org.springframework.security=DEBUG
+logging.level.com.example.devops=DEBUG
