--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -101,6 +101,9 @@
         <configuration>
           <release>17</release>
           <encoding>${project.build.sourceEncoding}</encoding>
+          <compilerArgs>
+            <arg>-parameters</arg>
+          </compilerArgs>
         </configuration>
       </plugin>
 
