fix session and edit function on user profile

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,29 +1,49 @@
-# Server
-server.port=8080
+# ==========================================
+# Base Application Configuration
+# ==========================================
 spring.application.name=Devops Backend
 
-# PostgreSQL - ???????????? localhost
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/devopsdb}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:devuser}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:devpass}
+# ==========================================
+# Default Server Configuration
+# ==========================================
+server.port=8080
+
+# ==========================================
+# Default Database Configuration (Development)
+# ==========================================
+spring.datasource.url=jdbc:postgresql://localhost:5432/devopsdb
+spring.datasource.username=devuser
+spring.datasource.password=devpass
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# ==========================================
 # JPA / Hibernate
+# ==========================================
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
+# ==========================================
 # Flyway
+# ==========================================
 spring.flyway.enabled=false
 
-# JWT
-app.jwt.secret=${APP_JWT_SECRET:dev-secret-dev-secret-dev-secret-dev}
+# ==========================================
+# JWT Configuration
+# ==========================================
+# ? ????? default value - ????????????? environment variables
+app.jwt.secret=${APP_JWT_SECRET}
 app.jwt.expiration=${APP_JWT_EXPIRATION:86400000}
 
-# Timezone
+# ==========================================
+# Jackson Configuration
+# ==========================================
 spring.jackson.time-zone=Asia/Bangkok
 
-# Logging - ????? debug
-logging.level.org.springframework.security=DEBUG
-logging.level.com.example.devops=DEBUG
+# ==========================================
+# Default Logging Configuration
+# ==========================================
+logging.level.root=INFO
+logging.level.org.springframework=INFO
+logging.level.com.example.devops=INFO
