--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -23,3 +23,7 @@ app.jwt.expiration=${APP_JWT_EXPIRATION:86400000}
 
 # Timezone
 spring.jackson.time-zone=Asia/Bangkok
+
+
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=DEBUG
