--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       SPRING_DATASOURCE_PASSWORD: devpass
       # JWT
       APP_JWT_SECRET: "uFrd1bQp5p9Hn3e3yM3jH0wH6b9Qh2b/8Qy6rH8cJz3pT2g7C1q9m3t4X6y8a1b2c3d4e5f6g7h8i9j0k1l2m3=="
-      APP_JWT_EXPIRATION: "3600"
+      APP_JWT_EXPIRATION: 86400000
       # ❗️ถ้ายังมี Flyway dependency อยู่ ให้ปิดด้วยค่าด้านล่าง
       SPRING_FLYWAY_ENABLED: "false"
     depends_on:
