--- a/Frontend/tsconfig.json
+++ b/Frontend/tsconfig.json
@@ -1,5 +1,34 @@
 {
-  "files": [],
+  "compilerOptions": {
+    /* ✅ พื้นฐานของ React + Vite */
+    "target": "ESNext",
+    "useDefineForClassFields": true,
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "allowJs": false,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+
+    /* ✅ Module Resolution */
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+
+    /* ✅ รองรับ JSX (React 17+) */
+    "jsx": "react-jsx",
+
+    /* ✅ รองรับ alias '@/...' */
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
+  },
+
+  "include": ["src"],
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
