--- a/Backend/src/test/resources/application-test.properties
+++ b/Backend/src/test/resources/application-test.properties
@@ -1,52 +1,84 @@
 # =========================
-#  Database (Original)
+#  Database (Original)  (KEEP AS COMMENT) ? ??????
 # =========================
-spring.datasource.url=jdbc:h2:mem:testdb;DATABASE_TO_LOWER=TRUE;DEFAULT_NULL_ORDERING=HIGH
+# spring.datasource.url=jdbc:h2:mem:testdb;DATABASE_TO_LOWER=TRUE;DEFAULT_NULL_ORDERING=HIGH
+# spring.datasource.driver-class-name=org.h2.Driver
+# spring.datasource.username=sa
+# spring.datasource.password=
+# spring.h2.console.enabled=true
+# spring.jpa.hibernate.ddl-auto=create-drop
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+# spring.jpa.properties.hibernate.jdbc.use_get_generated_keys=true
+# spring.jpa.properties.hibernate.jdbc.defer-datasource-initialization=false
+# spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+
+
+# =========================
+#  Database Configuration for Integration Tests (ACTIVE)
+# =========================
+
+spring.datasource.url=jdbc:h2:mem:testdb;
+MODE=PostgreSQL;
+DATABASE_TO_LOWER=TRUE;
+CASE_INSENSITIVE_IDENTIFIERS=TRUE;
+DEFAULT_NULL_ORDERING=HIGH;
+DB_CLOSE_DELAY=-1;
+DB_CLOSE_ON_EXIT=FALSE
+
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
+# H2 Console
 spring.h2.console.enabled=true
 
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
 
+# =========================
+#  JPA / Hibernate
+# =========================
+
+# ??? Hibernate auto-ddl
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.generate-ddl=false
+
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.jdbc.use_get_generated_keys=true
-spring.jpa.properties.hibernate.jdbc.defer-datasource-initialization=false
 
-# ? ??????? Reserved / Users / Row / Order / Status conflict
-spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+# ??? Spring Boot init schema ???? Hibernate
+spring.jpa.defer-datasource-initialization=true
+
+# ??? quoting ??????? ???????? lower-case schema.sql
+spring.jpa.properties.hibernate.globally_quoted_identifiers=false
+
+# ?????? defer initialization (?????)
+spring.jpa.properties.hibernate.jdbc.defer-datasource-initialization=true
 
 
 # =========================
-#  ?????????????? Integration Test ???????
+#  Flyway (???????????? error CREATE EXTENSION)
 # =========================
+spring.flyway.enabled=false
 
-# ???? schema.sql ????
+
+
+# =========================
+#  Spring SQL Init (Run schema.sql)
+# =========================
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:schema.sql
 
-# ? ??? PostgreSQL mode ??? H2 ?????? INTERVAL, STRING_AGG, LIMIT, ||
-#   (Spring ??????????????????????????????????)
-spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE;DEFAULT_NULL_ORDERING=HIGH;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 
-# LOGGING
+
+# =========================
+#  LOGGING
+# =========================
 logging.level.org.springframework=INFO
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=TRACE
 logging.level.com.example.devops=DEBUG
-
-
-# =========================
-#  ? ???????????: ??? Flyway ???? TEST (?????????????)
-# =========================
-spring.flyway.enabled=false
-spring.datasource.initialization-mode=never
-spring.sql.init.mode=never
-spring.jpa.hibernate.ddl-auto=none
-
-# ??? schema creation ???????????? Spring (??? conflict)
-spring.jpa.generate-ddl=false
-
+logging.level.org.springframework.jdbc.datasource.init=DEBUG
+logging.level.org.flywaydb=DEBUG
