--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -53,6 +53,13 @@
             <artifactId>postgresql</artifactId>
         </dependency>
 
+        <!-- H2 Database (for tests) -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <!-- Flyway -->
         <dependency>
             <groupId>org.flywaydb</groupId>
