fix path specification

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,7 +106,7 @@ jobs:
             1tsh4dowz/devops-frontend:latest
 
   # =========================
-  # E2E + Cypress (ไม่ fail workflow)
+  # E2E + Cypress (ยังรันแต่ไม่ทำให้ workflow fail)
   # =========================
   e2e:
     runs-on: ubuntu-latest
@@ -190,28 +190,9 @@ jobs:
           npm ci
           npx cypress install
 
-      # ==========================================================
-      # ✔ FIXED — ไม่มี space หลัง comma แล้ว และรวมเป็น 1 glob
-      # ==========================================================
       - name: Run Cypress (only success specs)
         working-directory: Frontend
-        run: >
-          npx cypress run --headless --spec
-          "cypress/e2e/Success/admin-eventdetail.cy.js,
-          cypress/e2e/Success/admin-permission.cy.js,
-          cypress/e2e/Success/admin-usermange.cy.js,
-          cypress/e2e/Success/admin.cy.js,
-          cypress/e2e/Success/checkin.cy.js,
-          cypress/e2e/Success/eventdashboard.cy.js,
-          cypress/e2e/Success/eventdetail.cy.js,
-          cypress/e2e/Success/eventselect.cy.js,
-          cypress/e2e/Success/landding.cy.js,
-          cypress/e2e/Success/login.cy.js,
-          cypress/e2e/Success/organizationmnge.cy.js,
-          cypress/e2e/Success/organizer-signup.cy.js,
-          cypress/e2e/Success/Profile.cy.js,
-          cypress/e2e/Success/signin.cy.js,
-          cypress/e2e/Success/ticketdetail.cy.js"
+        run: npx cypress run --headless --spec "cypress/e2e/Success/*.cy.js"
 
       - name: Upload E2E Artifacts
         if: always()
