Test stable version of k8s deployment

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,7 +106,7 @@ jobs:
             1tsh4dowz/devops-frontend:latest
 
   # =========================
-  # E2E + Cypress (ยังรันแต่ไม่ทำให้ workflow fail)
+  # E2E + Cypress (ยังรันแต่ไม่ fail workflow)
   # =========================
   e2e:
     runs-on: ubuntu-latest
@@ -190,9 +190,22 @@ jobs:
           npm ci
           npx cypress install
 
-      - name: Run Cypress (only success specs)
+      # ==========================================================
+      # ✔ Run only stable A2–A4, C1–C6
+      # ==========================================================
+      - name: Run Cypress (only stable specs)
         working-directory: Frontend
-        run: npx cypress run --headless --spec "cypress/e2e/Success/*.cy.js"
+        run: >
+          npx cypress run --headless --spec
+          'cypress/e2/Success/A2-creating-event-organizationmnge.cy.js,
+          cypress/e2/Success/A3-creating-event-eventdetail.cy.js,
+          cypress/e2/Success/A4-creating-event-ticketdetail.cy.js,
+          cypress/e2/Success/C1-buying-ticket-landding.cy.js,
+          cypress/e2/Success/C2-buying-ticket-signin.cy.js,
+          cypress/e2/Success/C3-buying-ticket-login.cy.js,
+          cypress/e2/Success/C4-buying-ticket-eventselect.cy.js,
+          cypress/e2/Success/C5-buying-ticket-Profile.cy.js,
+          cypress/e2/Success/C6-buying-ticket-checkin.cy.js'
 
       - name: Upload E2E Artifacts
         if: always()
