fix typo in workflow file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -190,22 +190,22 @@ jobs:
           npm ci
           npx cypress install
 
-      # ==========================================================
-      # ✔ Run only stable A2–A4, C1–C6
-      # ==========================================================
+      # =========================
+      # Run only A2–A4, C1–C6
+      # =========================
       - name: Run Cypress (only stable specs)
         working-directory: Frontend
-        run: >
-          npx cypress run --headless --spec
-          'cypress/e2/Success/A2-creating-event-organizationmnge.cy.js,
-          cypress/e2/Success/A3-creating-event-eventdetail.cy.js,
-          cypress/e2/Success/A4-creating-event-ticketdetail.cy.js,
-          cypress/e2/Success/C1-buying-ticket-landding.cy.js,
-          cypress/e2/Success/C2-buying-ticket-signin.cy.js,
-          cypress/e2/Success/C3-buying-ticket-login.cy.js,
-          cypress/e2/Success/C4-buying-ticket-eventselect.cy.js,
-          cypress/e2/Success/C5-buying-ticket-Profile.cy.js,
-          cypress/e2/Success/C6-buying-ticket-checkin.cy.js'
+        run: |
+          npx cypress run --headless \
+            --spec cypress/e2e/Success/A2-creating-event-organizationmnge.cy.js \
+            --spec cypress/e2e/Success/A3-creating-event-eventdetail.cy.js \
+            --spec cypress/e2e/Success/A4-creating-event-ticketdetail.cy.js \
+            --spec cypress/e2e/Success/C1-buying-ticket-landding.cy.js \
+            --spec cypress/e2e/Success/C2-buying-ticket-signin.cy.js \
+            --spec cypress/e2e/Success/C3-buying-ticket-login.cy.js \
+            --spec cypress/e2e/Success/C4-buying-ticket-eventselect.cy.js \
+            --spec cypress/e2e/Success/C5-buying-ticket-Profile.cy.js \
+            --spec cypress/e2e/Success/C6-buying-ticket-checkin.cy.js
 
       - name: Upload E2E Artifacts
         if: always()
