--- a/Backend/src/main/resources/application-dev.properties
+++ b/Backend/src/main/resources/application-dev.properties
@@ -9,6 +9,9 @@ spring.datasource.password=${DB_PASS:devpass}
 # ==========================================
 # JPA / Hibernate (DEV)
 # ==========================================
+# ????? dialect ?????? DEV ?????? PostgreSQL ????
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 # ??????????? show-sql ????????????????? logger ??? Hibernate
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
