Rollout restart backend & frontend deployments v2

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -240,8 +240,8 @@ jobs:
 
       - name: Restart backend & frontend deployments
         run: |
-          kubectl rollout restart deployment/backend
-          kubectl rollout restart deployment/frontend
+          kubectl rollout restart deployment/devops-backend
+          kubectl rollout restart deployment/devops-frontend
 
       - name: Check deployed resources
         run: |
